tests/rosetta/out/Rust/call-a-function-11.rs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:39:55Z
fn main() {
    fn zeroval(ival: i32) -> i32 {
        let mut x = ival;
        x = 0;
        return x;
    }
    fn zeroptr(ref: &mut Vec<i32>) -> () {
        ref[0] = 0;
    }
    fn main() -> () {
        let mut i = 1;
        println!("{}", format!("{}{}", "initial: ", i.to_string()));
        let tmp = zeroval(i);
        println!("{}", format!("{}{}", "zeroval: ", i.to_string()));
        let mut box = vec![i];
        zeroptr(&mut box);
        i = box[0];
        println!("{}", format!("{}{}", "zeroptr: ", i.to_string()));
        println!("pointer: 0");
    }
    main();
}
